# spctab

./: README.md  pyproject.toml  spctab.py
formats/: akao.py  spc.py
